Try to fix bug on iPhone

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,15 @@
   src: url('../../fonts/Proxima Nova Font.ttf');
 }
 
+:root {
+  --app-height: 100%;
+}
+
+.header-container {
+  height: 100vh;
+  height: var(--app-height);
+}
+
 ::placeholder {
   color: #ABB1AC;
 }
